--- a/app/src/main/res/layout/fragment_artists.xml
+++ b/app/src/main/res/layout/fragment_artists.xml
@@ -1,18 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<!-- res/layout/fragment_artists.xml -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.artists.ArtistsFragment">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text_artists"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_artists"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add_artist"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Artists Fragment"
-        android:layout_gravity="center"
-        android:padding="16dp"
-        android:textSize="18sp"
-        android:textColor="@android:color/black" />
-
-</FrameLayout>
+        android:layout_height="207dp"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:contentDescription="Add Artist"
+        android:src="@drawable/ic_add" />
+</LinearLayout>
