--- a/app/src/main/res/layout/dialog_edit_event.xml
+++ b/app/src/main/res/layout/dialog_edit_event.xml
@@ -46,5 +46,5 @@
         android:id="@+id/buttonPayEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/mark_as_paid" />
+        android:text="@string/book_event" />
 </LinearLayout>
